[FEA] complete crud
