# back/public/swagger.json
@@ -32,6 +32,37 @@
 					"_id"
 				],
 				"type": "object"
+			},
+			"Pick_Wine.Exclude_keyofWine._id__": {
+				"properties": {
+					"category": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"date": {
+						"type": "number",
+						"format": "double"
+					},
+					"providedBy": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"date",
+					"providedBy"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Wine._id_": {
+				"$ref": "#/components/schemas/Pick_Wine.Exclude_keyofWine._id__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"CreateWine": {
+				"$ref": "#/components/schemas/Omit_Wine._id_"
 			}
 		},
 		"securitySchemes": {}
@@ -69,6 +100,131 @@
 				],
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateBottleWine",
+				"responses": {
+					"201": {
+						"description": "Created",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Wines"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateWine"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/wines/{id}": {
+			"get": {
+				"operationId": "GetWine",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Wine"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Wines"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "UpdateWine",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Wines"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateWine"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteWine",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"Wines"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
